<resources>
    <string name="app_name">AudioPlay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_send_feedback">App Feedback</string>
    <string name="feedback_email">henryudorji@gmail.com</string>
    <string name="feedback_subject">AudioPlay Feedback</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="sort_order_entry_year">Year</string>
    <string name="sort_order_entry_artist">Artist</string>
    <string name="sort_order_entry_album">Album</string>
    <string name="sort_order_entry_duration">Duration</string>
    <string name="sort_order_entry_date">Date</string>
    <string name="sort_by">Sort by</string>
    <string name="search">Search</string>
    <string name="sort_order_entry_number_of_songs">Number of Songs</string>
    <string name="sort_order_entry_number_of_albums">Number of Albums</string>
    <string name="equalizer">Equalizer</string>
    <string name="more">More</string>
    <string name="deleteTrackTitle">Delete Track</string>
    <string name="deleteTrackMessage">Are you sure you want to delete this track</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="delete">Delete</string>
    <string name="set_as_ringtone">Set as RingTone</string>
    <string name="play_next">Play Next</string>
    <string name="default_dir">Default Dir</string>
    <string name="refresh">Refresh</string>
    <string name="share">Share</string>
    <string name="playlist">Playlist</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="about_app">About App</string>
    <string name="rate_app">Rate App</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="create">Create</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="songs">Song(s)</string>
    <string name="action_rename">Rename Playlist</string>
    <string name="action_delete">Delete Playlist</string>
    <string name="are_you_sure_you_want_to_delete_playlist">Are you Sure you want to delete this playlist</string>
    <string name="rename_playlist">Rename Playlist</string>
    <string name="rename">Rename</string>
    <string name="date_added">Date Added</string>
    <string name="date_modified">Date Modified</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="song_would_be_played_next">Song would be played next</string>
    <string name="song_added_to_queue">Song added to queue</string>
    <string name="permissions_title">Permissions</string>
    <string name="allow_to_set_ring_tone">Allow permission to allow app set RingTone</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="playing_queue">Playing Queue</string>
    <string name="launch_whatsapp">Launch WhatsApp</string>
    <string name="select_language">Select Language</string>
    <string name="select_style">Select Style</string>
</resources>