<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/search"
        android:id="@+id/song_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item android:title="Equalizer"
        android:id="@+id/equalizerBtn"
        android:icon="@drawable/ic_equalizer"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_sort_by"
        android:title="@string/sort_by"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_sort_by_az"
                android:title="@string/sort_order_entry_az"/>
            <item
                android:id="@+id/menu_sort_by_za"
                android:title="@string/sort_order_entry_za"/>
            <item
                android:id="@+id/menu_sort_by_year"
                android:title="@string/sort_order_entry_year"/>
            <!--<item
                android:id="@+id/menu_sort_by_artist"
                android:title="@string/sort_order_entry_artist"/>
            <item
                android:id="@+id/menu_sort_by_album"
                android:title="@string/sort_order_entry_album"/>-->
            <item
                android:id="@+id/menu_sort_by_duration"
                android:title="@string/sort_order_entry_duration"/>

            <item
                android:id="@+id/menu_sort_by_date"
                android:title="@string/sort_order_entry_date"/>
        </menu>
    </item>
</menu>